--- a/PlanetWallet/Resources/2_PinCode.storyboard
+++ b/PlanetWallet/Resources/2_PinCode.storyboard
@@ -31,7 +31,7 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="362"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registration PIN Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpQ-zW-vGd" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="47.666666666666657" y="130" width="279.66666666666674" height="32.666666666666657"/>
+                                        <rect key="frame" x="36.333333333333343" y="119.66666666666667" width="302.33333333333326" height="40.666666666666671"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Bold" family="Work Sans" pointSize="28"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -43,7 +43,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter the 4 digit + alphabet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUa-oG-T4d" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="90.666666666666686" y="171.66666666666666" width="194" height="18.666666666666657"/>
+                                        <rect key="frame" x="79" y="169.33333333333334" width="217" height="23.333333333333343"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="16"/>
                                         <color key="textColor" red="0.36078431372549019" green="0.34901960784313724" blue="0.39215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -55,16 +55,30 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9jw-S7-Cx7" customClass="PinView" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="100.66666666666669" y="242" width="174" height="12"/>
+                                        <rect key="frame" x="100.66666666666669" y="244.33333333333331" width="174" height="12"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="174" id="EE6-7v-Pfc"/>
                                             <constraint firstAttribute="height" constant="12" id="hOj-58-LnQ"/>
                                         </constraints>
                                     </view>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gZ9-s1-d3s">
-                                        <rect key="frame" x="168" y="15" width="39" height="30"/>
-                                        <state key="normal" title="초기화"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gZ9-s1-d3s">
+                                        <rect key="frame" x="305" y="31.000000000000004" width="39" height="32.333333333333343"/>
+                                        <state key="normal">
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="Reset">
+                                                    <attributes>
+                                                        <color key="NSColor" red="1" green="0.0" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <font key="NSFont" size="14" name="WorkSans-Regular"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        <integer key="NSUnderline" value="1"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="xibLocKey" value="transfer_confirm_reset_title"/>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="didTouchedReset:" destination="TTs-8X-dJK" eventType="touchUpInside" id="Bph-Ol-PIY"/>
                                         </connections>
@@ -72,11 +86,11 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="gZ9-s1-d3s" firstAttribute="centerX" secondItem="u2F-2i-UtN" secondAttribute="centerX" id="5dj-Eh-TZ6"/>
-                                    <constraint firstItem="gZ9-s1-d3s" firstAttribute="top" secondItem="u2F-2i-UtN" secondAttribute="top" constant="15" id="DDY-Ru-vyo"/>
+                                    <constraint firstItem="gZ9-s1-d3s" firstAttribute="top" secondItem="u2F-2i-UtN" secondAttribute="top" constant="31" id="AqE-Xv-66x"/>
                                     <constraint firstItem="9jw-S7-Cx7" firstAttribute="top" secondItem="vUa-oG-T4d" secondAttribute="bottom" constant="51.5" id="MRv-X7-Zir"/>
                                     <constraint firstItem="vUa-oG-T4d" firstAttribute="centerY" secondItem="u2F-2i-UtN" secondAttribute="centerY" id="R4c-ae-FwO"/>
                                     <constraint firstItem="dpQ-zW-vGd" firstAttribute="centerX" secondItem="u2F-2i-UtN" secondAttribute="centerX" id="TRP-Fp-kSG"/>
+                                    <constraint firstAttribute="trailing" secondItem="gZ9-s1-d3s" secondAttribute="trailing" constant="31" id="VAs-IM-bun"/>
                                     <constraint firstItem="vUa-oG-T4d" firstAttribute="centerX" secondItem="u2F-2i-UtN" secondAttribute="centerX" id="dw1-pA-u0t"/>
                                     <constraint firstItem="9jw-S7-Cx7" firstAttribute="centerX" secondItem="u2F-2i-UtN" secondAttribute="centerX" id="our-xQ-XAs"/>
                                     <constraint firstItem="vUa-oG-T4d" firstAttribute="top" secondItem="dpQ-zW-vGd" secondAttribute="bottom" constant="9" id="tM4-Qd-9Lg"/>
@@ -147,7 +161,7 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="362"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verification Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QeC-qN-REx" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="81.000000000000014" y="130" width="213.33333333333337" height="32.666666666666657"/>
+                                        <rect key="frame" x="69.000000000000014" y="119.66666666666667" width="237.33333333333337" height="40.666666666666671"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Bold" family="Work Sans" pointSize="28"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -159,7 +173,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter the 4 digit + alphabet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wP7-nu-37l" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="90.666666666666686" y="171.66666666666666" width="194" height="18.666666666666657"/>
+                                        <rect key="frame" x="79" y="169.33333333333334" width="217" height="23.333333333333343"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="16"/>
                                         <color key="textColor" red="0.36078431370000003" green="0.34901960780000002" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -171,7 +185,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTs-fe-2CY" customClass="PinView" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="112.66666666666669" y="260.33333333333331" width="150" height="12"/>
+                                        <rect key="frame" x="112.66666666666669" y="262.66666666666669" width="150" height="12"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="12" id="jKi-ey-Vck"/>
