--- a/PlanetWallet/Views/4_Main/Cells/TopMenuCell.xib
+++ b/PlanetWallet/Views/4_Main/Cells/TopMenuCell.xib
@@ -28,23 +28,23 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QyJ-s5-Rxf" customClass="PlanetView" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="20" y="16.5" width="22" height="22"/>
+                    <rect key="frame" x="20" y="16" width="28" height="28"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="22" id="3DT-Kq-ePv"/>
-                        <constraint firstAttribute="width" constant="22" id="c8G-e7-cOP"/>
+                        <constraint firstAttribute="height" constant="28" id="3DT-Kq-ePv"/>
+                        <constraint firstAttribute="width" constant="28" id="c8G-e7-cOP"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="string" keyPath="data" value="문규송"/>
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Satrianiafgaksdhfjkashkjfajsdfhslafhlsdhfkhl" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whX-tA-YSO" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="52" y="17.5" width="181" height="20.5"/>
-                    <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
+                    <rect key="frame" x="63" y="18.5" width="233" height="23.5"/>
+                    <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="16"/>
                     <color key="textColor" name="textColorDark"/>
                     <nil key="highlightedColor"/>
                     <userDefinedRuntimeAttributes>
@@ -54,7 +54,7 @@
                     </userDefinedRuntimeAttributes>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageArrowRightGray" translatesAutoresizingMaskIntoConstraints="NO" id="PDY-Tr-Ebl" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="337" y="17.5" width="20" height="20"/>
+                    <rect key="frame" x="337" y="20" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="K42-BY-2Kf"/>
                         <constraint firstAttribute="width" constant="20" id="qrm-Ai-NWD"/>
@@ -63,8 +63,8 @@
                         <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imageArrowRightBlue"/>
                     </userDefinedRuntimeAttributes>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH Universe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NtF-NI-r0m" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="238" y="17.5" width="91" height="20.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NtF-NI-r0m" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
+                    <rect key="frame" x="301" y="20" width="28" height="20.5"/>
                     <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                     <color key="textColor" name="detailTextDark"/>
                     <nil key="highlightedColor"/>
@@ -75,13 +75,13 @@
                     </userDefinedRuntimeAttributes>
                 </label>
                 <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePlanetlistAddBlack" translatesAutoresizingMaskIntoConstraints="NO" id="IZp-cs-i1o" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="20" y="16.5" width="22" height="22"/>
+                    <rect key="frame" x="20" y="16" width="28" height="28"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imagePlanetlistAddWhite"/>
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hzo-vT-pyX">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                     <connections>
                         <action selector="didTouchedFooter:" destination="-1" eventType="touchUpInside" id="RUu-bk-xda"/>
                     </connections>
@@ -102,7 +102,7 @@
                 <constraint firstItem="PDY-Tr-Ebl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="iyI-Ug-jBY"/>
                 <constraint firstItem="Hzo-vT-pyX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kik-HM-3pz"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Hzo-vT-pyX" secondAttribute="bottom" id="r9V-US-k5n"/>
-                <constraint firstItem="whX-tA-YSO" firstAttribute="leading" secondItem="QyJ-s5-Rxf" secondAttribute="trailing" constant="10" id="r9d-02-i7g"/>
+                <constraint firstItem="whX-tA-YSO" firstAttribute="leading" secondItem="QyJ-s5-Rxf" secondAttribute="trailing" constant="15" id="r9d-02-i7g"/>
                 <constraint firstItem="Hzo-vT-pyX" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="whC-Ii-q1e"/>
                 <constraint firstItem="IZp-cs-i1o" firstAttribute="top" secondItem="QyJ-s5-Rxf" secondAttribute="top" id="xcB-Mo-xeV"/>
                 <constraint firstItem="NtF-NI-r0m" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="zRl-Wj-9AB"/>
